# memcloud

./: .gitignore  README.md  install.ps1  install.sh  uninstall.sh
.github/workflows/: release.yml
docs/: architecture.md
examples/nodejs/: index.ts  large-offload.ts  package.json  tsconfig.json
interceptor/: memcloud_vm.c
js-sdk/: package.json
js-sdk/src/: api.ts  socket.ts
memcli/: Cargo.toml
memcli/src/: main.rs
memnode/: Cargo.toml
memnode/src/: main.rs  rpc.rs
memnode/src/blocks/: mod.rs
memnode/src/discovery/: mod.rs
memnode/src/net/: auth.rs  mod.rs  secure_stream.rs  transcript.rs
memnode/src/peers/: consent.rs  mod.rs
memsdk/: Cargo.toml
memsdk/src/: c_api.rs  lib.rs
website/: index.html  tailwind.config.ts
website/src/: App.tsx  index.css
website/src/components/: Badge.tsx  CodeBlock.tsx  FeatureCard.tsx  InteractiveTerminal.tsx  TermDefinition.tsx  Terminal.tsx
website/src/pages/: CliDocs.tsx  Index.tsx
