[package]
name = "memcli"
version = "0.1.0"
edition = "2021"

[dependencies]
memsdk = { path = "../memsdk" }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
dialoguer = "0.10"
console = "0.15"
log = { workspace = true }
env_logger = { workspace = true }
dirs = "5.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
sysinfo = "0.30"

[package.metadata.deb]
maintainer = "Vibhanshu Garg <v2001.garg@gmail.com>"
copyright = "2024, Vibhanshu Garg"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/memcli", "usr/bin/", "755"]
]
extended-description = """\
MemCloud CLI
Command-line interface for interacting with the MemCloud daemon.
"""
