[package]
name = "memsdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "time", "rt", "rt-multi-thread"] }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
lazy_static = "1.4"
serde_json = "1.0.145"
rmp-serde = "1.3"
serde_bytes = "0.11"

[lib]
crate-type = ["rlib", "cdylib"]
